Thu May 22 09:47:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-codeset.patch:
        * ace/Codeset_Registry_db.cpp:
          Merged patch into the regular registry

        * ace/OS_NS_sys_uio.cpp:
          Const change

        * ace/Service_Config.cpp:
          Layout change

        * rpmbuild/ace-tao.spec:
          Removed codeset patch

Thu May 22 09:37:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/*
          New directory with files needed to create rpm's for ACE/TAO.
          These files will be improved and we will check whether the
          rpm patches can be integrated into the real config files.
          Thanks to Ken Sedgwick <ksedgwick at bonsai dot com> for
          delivering these files.

Wed May 21 19:01:10 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/MonitorControl/*:

          Changed directory name to Monitor_Control and renamed all
          contained files, classes, libs, MPC projects, ifdef guards,
          and macros similarly, to better conform to the ACE style.

        * ace/Monitor_Point_Registry.cpp:
        * ace/Monitor_Admin.h:
        * ace/Monitor_Admin.cpp:
        * bin/MakeProjectCreator/config/ace_mc.mpb:
        * examples/Monitor/Bytes_Sent/bytes_sent.cpp:
        * examples/Monitor/Bytes_Sent/Makefile.am:
        * examples/Monitor/Message_Queue_Size/message_queue_size.cpp:
        * examples/Monitor/Message_Queue_Size/Makefile.am:
        * examples/Monitor/Constraint/constraint.cpp:
        * examples/Monitor/Constraint/Makefile.am:
        * examples/Monitor/CPU_Load/cpu_load.cpp:
        * examples/Monitor/CPU_Load/Makefile.am:
        * examples/Monitor/Num_Threads/Makefile.am:
        * examples/Monitor/Num_Threads/num_threads.cpp:
        * examples/Monitor/Group/Makefile.am:
        * examples/Monitor/Group/group.cpp:
        * examples/Monitor/Memory_Usage/Makefile.am: